<resources>
    <!-- Parse -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">PKZe2cAljdKIgRyfX3oPMfajh8xS95ueOfwAWclC</string>
    <string name="back4app_client_key">ZNyk9rHmvxKquD47Z5UqQ8aqv6OiXQSA8QP6o9lg</string>

    <string name="app_name">SatisfactionSurvey</string>
    <string name="research_presentation">Queremos ouvir você</string>
    <string name="edt_name">Nome</string>
    <string name="edt_company">Empresa</string>
    <string name="edt_email">E-mail</string>
    <string name="edt_telephone">Telefone</string>
    <string name="edt_comments">Comentários</string>
    <string name="btn_register">Registrar</string>
    <string name="evaluation_sent_sucessfully">Avaliação enviada com sucesso.</string>
    <string name="error_submitting">Erro ao enviar avaliação.</string>
    <string name="rate_your_comment">Classifique seu comentário</string>
    <string name="tv_communication">Comunicação</string>
    <string name="tv_commitment">Comprometimento</string>
    <string name="tv_cordiality">Cordialidade</string>
    <string name="tv_knowledge">Conhecimento</string>
    <string name="toast_fill_in_required_fields">Por favor, preencha todos os campos obrigatórios.</string>
    <string name="invalid_email">Por favor, digite um endereço de email válido.</string>
    <string name="tranks">A sua opinião e fundamental para o nosso desenvolvimento. Obrigado!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_note_add">Avaliação</string>
    <string name="tab_text_graphics">Gráficos</string>
    <string name="tab_text_historic">Histórico</string>
    <string name="dissatisfied">Insatisfeito</string>
    <string name="indifferent">Indiferente</string>
    <string name="satisfied">Satisfeito</string>
    <string name="error_display_data">"Ocorreu um erro ao tentar exibir os dados."</string>
    <string name="error_retrieve_evaluations">Ocorreu um erro ao tentar recuperar as avaliações.</string>

    <string-array name="types_evaluation_array">
        <item>Elogio</item>
        <item>Dúvida</item>
        <item>Crítica</item>
        <item>Sugestão</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_desc">Pesquisa de Satisfação</string>
    <string name="title_activity_about12_notas">About12NotasActivity</string>
    <string name="about_12notas">12° Ofício de Notas</string>
    <string name="cartorio">O Cartório</string>
    <string name="tabelia">A Tabeliã</string>
    <string name="politica_qualidade">Política Qualidade</string>
    <string name="about">Sobre</string>
</resources>
